Add gem rails_simple_config (from https://github.com/virtualstaticvoid/rails_simple_config)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,8 +14,9 @@
 <% end %>
 
 <% 
-title "Welcome to your new app"
-content_for :subtitle do "Let's get started" end
+title APP_CONFIG[:app_name]
+content_for :heading do APP_CONFIG[:app_name] end
+content_for :subtitle do APP_CONFIG[:app_tagline] end
 %>
 
 <div class="row">
