--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%= content_for?(:title) ? yield(:title) : APP_CONFIG[:app_name] + ": " + APP_CONFIG[:app_tagline] %></title>
+	<title><%= content_for?(:title) ? yield(:title) : APP_CONFIG[:app_name] %></title>
 	<%= stylesheet_link_tag "bootstrap-1.0.0.min", "bootstrap-doc-styles", "omniauth", "application" %>
 	<%= javascript_include_tag :defaults %>
 	<%= csrf_meta_tag %>
