home#index window title

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 <% end %>
 
 <% 
-title APP_CONFIG[:app_name]
+title "#{APP_CONFIG[:app_name]} / Home"
 content_for :heading do APP_CONFIG[:app_name] end
 content_for :subtitle do APP_CONFIG[:app_tagline] end
 %>
