Some copy for home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,17 +22,33 @@ content_for :subtitle do APP_CONFIG[:app_tagline] end
 <div class="row">
 	<div class="span8 columns">
 
-		<p>Cardigan wes anderson skateboard cliche gluten-free chambray whatever terry richardson. Lo-fi pitchfork quinoa, thundercats tattooed organic artisan bicycle rights next level skateboard helvetica gluten-free DIY.</p>
+		<p>Twarl is a curated directory of independent designer/makers, producing bespoke commissions and exclusive lines of clothing, accessories & costumes.</p>
 		
-		<p>Echo park butcher cosby sweater blog organic williamsburg Austin sartorial beard wolf. Sustainable quinoa tattooed put a bird on it skateboard irony chambray american apparel fixie organic. Skateboard wayfarers marfa viral, beard messenger bag seitan VHS yr. </p>
-		<p>Synth butcher fixie, single-origin coffee brunch food truck master cleanse thundercats letterpress whatever american apparel terry richardson seitan gentrify gluten-free. Scenester stumptown biodiesel fap high life. Etsy raw denim carles synth, vinyl mixtape you probably haven't heard of them salvia leggings. Craft beer biodiesel DIY Austin, artisan shoreditch fixie squid salvia fanny pack mustache quinoa.</p>
+		<p>Going out to a big party and need the perfect costume? Want some unique clothes and are willing to pay? We found there are many talented designer-makers scattered around but often it requires a personal recommendation to find them. This site aims to give you a list of approachable and talented individuals across a range of styles and specialities.</p>
 
+		<h3>FAQ</h3>
+		<ul>
+			<li><a href="">I have a suggestion / problem / comment on how to make Twarl better.</a></li>
+			<li><a href="">I've had a bad experience of someone listed on Twarl.</a></li>
+			<li><a href="">I know someone you should include.</a></li>
+			<li><a href="">I make beautiful garments or accessories and would like to be included.</a></li>
+		</ul>
+		
 	</div>
 	<div class="span8 columns">
-
-		<p>Messenger bag locavore food truck mustache high life VHS butcher, banh mi vinyl. Etsy thundercats brunch seitan butcher jean shorts, twee before they sold out williamsburg. Williamsburg high life keffiyeh banh mi, marfa echo park whatever sustainable wolf mustache salvia. Terry richardson mixtape fanny pack gentrify iphone leggings fixie locavore, shoreditch messenger bag hoodie. Photo booth lomo stumptown banksy. </p>
-
-		<p><a href="http://hipsteripsum.me/">I want Hipster Ipsum too.</a></p>
-
+		<h2>What are you looking for?</h2>
+		<form action="" method="get" >
+			<input type="text" value="" name="search" class="search" id="search" placeholder="Eg. red latex dress" required="">
+		</form>
+		
+		Example searches:
+		<ul>
+			<li>Latex dress</li>
+			<li>20s style 3 piece suit</li>
+			<li>cool hat</li>
+			<li>halloween costume</li>
+			<li>animal kigu</li>
+		</ul>
+		
 	</div>
 </div>
